Fix page spacing issues and add job creator

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@ body {
 
 .eudaimonia {
   overflow: hidden;
+  height: 100vh;
 }
